--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2010-06-04
+    * Use recently standardized error codes in RDS format.
+
 2010-06-03
     * Allow request methods other than GET and HEAD.
       From Yichun Zhang (agentzh) via ngx_drizzle.
