--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2010-06-13    VERSION 0.3
+    * Allow configuration of method-specific queries.
+
+    * Restrict "postgres_pass" directive to "location" context.
+
 2010-06-07
     * Free keepalive connections on nginx shutdown.
       Requested by Yichun Zhang (agentzh).
