--- a/README
+++ b/README
@@ -47,12 +47,19 @@ CONFIGURATION DIRECTIVES:
   default: none
 
 
-  postgres_get_value row column (context: http, server, location)
-  ---------------------------------------------------------------
-  Return single value from the result-set in clear text.
+  postgres_output none|value|row|rds [row] [column] (context: http, server, location)
+  -----------------------------------------------------------------------------------
+  Set output format:
+  - rds   - return output in RDS format (with appropriate Content-Type),
+  - row   - return all values from a single row from the result-set in clear text,
+            values are separated by new line (with default Content-Type),
+  - value - return single value from the result-set in clear text (with default Content-Type),
+  - none  - don't return anything, this should be used only when extracting values
+            with "postgres_set" for use with other modules (Content-Type isn't set).
+
   Row and column numbers start at 0.
 
-  default: none
+  default: rds
 
 
   postgres_set $variable row column [optional|required] (context: http, server, location)
