Add note about status of the module and compatibility with different nginx releases to the README.

--- a/README
+++ b/README
@@ -7,6 +7,15 @@ Response is generated in RDS format, so it's compatible with:
 rds_json, ngx_drizzle and ngx_oracle modules.
 
 
+STATUS:
+-------
+This module is production-ready and it's compatible
+with following nginx releases:
+
+- 0.7.x (tested with 0.7.65 to 0.7.67),
+- 0.8.x (tested with 0.8.0 to 0.8.42).
+
+
 CONFIGURATION DIRECTIVES:
 -------------------------
 
