--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+2010-09-30    VERSION 0.7
+    * Add option to send original response body with error responses
+      set by "postgres_rewrite" directive.
+
+2010-08-25
+    * Fix error that could lead to failed connection to the database.
+
+    * Log more details on failed connection to the database.
+
 2010-08-15    VERSION 0.6
     * Fix linking issue that manifested itself when nginx was build
       with both: ngx_postgres and ngx_supervisord modules.
